fix: scrollbars now appear when necessary on tide-chart component, but are absent on map component, at least on a desktop browser

--- a/stencil/src/components/tide-chart/tide-chart.css
+++ b/stencil/src/components/tide-chart/tide-chart.css
@@ -14,8 +14,8 @@
 #chartContainer {
 	padding: 1rem;
 	margin: 1rem;
-	/* width: 50rem; */
-	/* max-width: 100%; */
 	border: 1px solid black;
+	max-width: 100%;
+	overflow: auto;
 }
 
